--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   }
   a {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   div.item a div {
@@ -54,7 +54,6 @@
   div.item a div.title {
     font-weight: bold;
   }
-
   div.item a div.description {
     /*font-weight: bold;*/
     font-size: 14px;
@@ -137,13 +136,25 @@
     }
   }
   @media screen and (max-width : 460px){
+    a {
+      font-size: 15px;
+    }
+    div.item a div.description {
+      font-size: 14px;
+    }
+
     div.coverborder0 {
       border: 0px solid black;
     }
     div.coverborder1 {
       border: 0px solid black;
     }
+
+    div.coverbox1 {
+      font-size: 2.0em;
+    }
   }
+
 
 
 
