--- a/style.css
+++ b/style.css
@@ -40,12 +40,19 @@
     font-weight: bold;
     color: #AAAAAA
   }
+
+
   div.item {
     border-bottom: 1px solid #eee;
   }
   a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
+  }
+  a.koitem {
+    font-family: 'Nanum Gothic', serif;
+    font-size: 17px;
+    font-weight: bolder;
   }
 
   div.item a div {
@@ -137,6 +144,9 @@
   }
   @media screen and (max-width : 460px){
     a {
+      font-size: 15px;
+    }
+    a.koitem {
       font-size: 15px;
     }
     div.item a div.description {
